--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
     </main>
     	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
 
